[project]
name = "z-image-turbo"
description = "Comfy UI nodes for Z-Image-Turbo to run native weights with automatic model downloading and support for 2048x2048 resolution. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["modelscope", "transformers", "accelerate", "sentencepiece", "protobuf"]

[project.urls]
Repository = "https://github.com/tpc2233/ComfyUI-Z-Image-Turbo"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/tpc2233/ComfyUI-Z-Image-Turbo/wiki"
"Bug Tracker" = "https://github.com/tpc2233/ComfyUI-Z-Image-Turbo/issues"

[tool.comfy]
PublisherId = "tpc2233"
DisplayName = "ComfyUI-Z-Image-Turbo"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

